gitops/apps/base/pihole/app/np-allow-tailscale-to-pihole.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pihole-allow-dns-and-ui
  namespace: pihole
spec:
  podSelector:
    matchLabels:
      app: pihole
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tailscale
    - podSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  # UI: allow only from tailscale namespace
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tailscale
    ports:
    - protocol: TCP
      port: 80
